# coursework_4_TRT

./: README.md  config.py  main.py  pyproject.toml
src/: DataProcessing.py  FileReader.py
tests/: test_DataProcessing.py  test_FileReader.py  test_config.py
tests/test_data/: test_operations.json
